--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-.example_graph div {
-    font: 10px sans-serif;
-    background-color: blue;
-    text-align: right;
-    padding: 3px;
-    margin: 1px;
-    color: white;
-  }
+.bar-chart {  
+    background-color: #C7D9D9;  
+}
