--- a/index.css
+++ b/index.css
@@ -1,3 +1,15 @@
-.bar-chart {  
-    background-color: #C7D9D9;  
-}
+.bar {
+    fill: #71EEB8;
+  }
+  
+  .bar:hover {
+    fill: slateblue;
+  }
+  
+  .axis-x path {
+    display: none;
+  }
+  
+  .axis text {
+    font-weight: bold;
+  }
